--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Show Banner" />
+
     <Button
         android:id="@+id/interstitial"
-        android:layout_below="@id/banner"
-        android:text="Show Interstitial"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/banner"
+        android:text="Show Interstitial" />
     <Button
 
         android:id="@+id/rewarded"
